feat: add height, validate, updateTree endpoints, MongoTree support and TreeInfoResponse
